Bug 1179058 - Implement shouldAddToSessionHistory in WebBrowserChrome JS object. r=adw